--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,48 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    border-top: .15em solid #353567;
+    border-bottom: .15em solid #353567;
+    padding: .75em;
+    margin: 0;
+    height: 15vh;
+}
+
+.starred-ideas {
+    font-size: 12px;
+    color: #bfbfdd;
+    margin: 0;
+}
+
+.show-ideas-button {
+    font: 15px;
+    color: #e9e9f3;
+    background: #5356a4;
+    border: none;
+    padding: .5em 1.25em .40em 1.25em;
+}
+
+.container-right {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 77%;
+}
+
+.container-top {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #a9aad2;
+    height: 24em;
+}
+
+.title-area,
+.body-area {
+    display: flex;
+    flex-direction: column;
+    font-size: 15;
+    color: #1f1f3d;
+    width: 45%;
 }
