--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-/* font family all the same */
 * {
     font-family: "Open Sans", sans-serif;
 }
 
+html,
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 main {
@@ -15,7 +15,7 @@ main {
 
 .container-left {
     background: #1f1f3d;
-    height: 60em;
+    height: 100vh;
     width: 25%;
     margin-top: -10px;
     margin-bottom: -10px;  
@@ -62,8 +62,8 @@ main {
 .container-right {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 77%;
+    height: 100vh;
+    width: 75%;
     background-color: #a9aad2;
     margin-top: -10px;
 }
@@ -74,7 +74,7 @@ main {
     justify-content: space-evenly;
     align-items: center;
     color: #a9aad2;
-    height: 24em;
+    height: 40%;
 }
 
 .title-area,
@@ -148,14 +148,15 @@ textarea {
     flex-wrap: wrap;
     justify-content: space-evenly;
     background: #eaeaf4;
-    height: 35em;
+    height: 60%;
+    overflow-y: auto;
 }
 
 .idea-card {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 1.5em;
+    margin: 1.5em;
     height: 15em;
     width: 14em;
 }
@@ -203,4 +204,3 @@ textarea {
     height: 1.75em;
     width: 1.75em;
 }
-
