--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,13 @@ main {
     background: #1f1f3d;
     height: 100vh;
     width: 25%;
-    margin-top: -10px;
-    margin-bottom: -10px;  
-    margin-left: -10px;
     color: #e9e9f3;
 }
 
 .heading {
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 700;
     padding: .5em;
-    margin: .5em;
     color: #e9e9f3;
 }
 
@@ -39,24 +35,25 @@ main {
     border-bottom: .15em solid #353567;
     padding: .75em;
     margin: 0;
-    height: 15vh;
+    height: 20vh;
 }
 
 .starred-ideas {
-    font-size: 12px;
-    /* font-weight: 700; */
+    font-size: 20px;
+    font-weight: 600;
     color: #bfbfdd;
     margin: 0;
 }
 
 .show-ideas-button {
-    font-size: 16px;
+    font-size: 25px;
     font-weight: 600;
     color: #e9e9f3;
     background: #5356a4;
     border: 2px #353568 solid;
     border-radius: 0.1em;
-    padding: .5em 1.25em .40em 1.25em;
+    padding: .5em 1.25em;
+    width: fit-content;
 }
 
 .container-right {
@@ -65,7 +62,6 @@ main {
     height: 100vh;
     width: 75%;
     background-color: #a9aad2;
-    margin-top: -10px;
 }
 
 .container-top {
@@ -74,7 +70,7 @@ main {
     justify-content: space-evenly;
     align-items: center;
     color: #a9aad2;
-    height: 40%;
+    height: 50%;
 }
 
 .title-area,
@@ -106,8 +102,8 @@ textarea {
 .save-button {
     background: #9292b7;
     color: #eaeaf4;
-    font-size: 15px;
-    border: .15em #5356a4 solid;
+    font-size: 25px;
+    border: .1em #5356a4 solid;
     border-radius: .25em;
     padding: .5em;
     width: 45%;
@@ -117,6 +113,7 @@ textarea {
 .save-button-2 {
     background: #353567;
     cursor: pointer;
+    font-weight: 700;
 }
 
 .search-ideas-box {
@@ -148,7 +145,7 @@ textarea {
     flex-wrap: wrap;
     justify-content: space-evenly;
     background: #eaeaf4;
-    height: 60%;
+    height: 50%;
     overflow-y: auto;
 }
 
