--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
     font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 html,
@@ -46,7 +48,7 @@ main {
 }
 
 .show-ideas-button {
-    font-size: 25px;
+    font-size: 1em;
     font-weight: 600;
     color: #e9e9f3;
     background: #5356a4;
@@ -102,10 +104,11 @@ textarea {
 .save-button {
     background: #9292b7;
     color: #eaeaf4;
-    font-size: 25px;
+    font-size: 23px;
     border: .1em #5356a4 solid;
     border-radius: .25em;
-    padding: .5em;
+    padding: .2em;
+    height: 2em;
     width: 45%;
     cursor: text;
 }
@@ -118,26 +121,32 @@ textarea {
 
 .search-ideas-box {
     display: flex;
-    height: 2.5em;
+    height: 3em;
     width: 45%;
     outline: none;
 }
 
 .search-image {
     background: #353567;
-    padding: .5em;
-    margin: 0;
-    height: 1.5em;
+    padding: .7em;
     width: 1.5em;
     border-top-left-radius: .25em;
     border-bottom-left-radius: .25em;
 }
+
 .search-field {
     width: 100%;
     border: 0.15em #5356a4 solid;
     border-left-width: 0em;
     border-top-right-radius: .25em;
     border-bottom-right-radius: .25em;
+}
+
+.search-field::placeholder {
+    font-size: 15px;
+    font-weight: 300;
+    color: #5356a4;
+    padding-left: .5em;
 }
 
 .container-bottom {
