--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ main {
     display: flex;
     font-weight: 700;
     flex-direction: column;
-    font-size: 15;
+    font-size: 15px;
     color: #1f1f3d;
     width: 45%;
 }
@@ -88,9 +88,10 @@ main {
 textarea {
     border: .15em #5356a4 solid;
     border-radius: .25em;
-    outline: none;
+    outline: 0;
     margin-top: .25em;
-    resize: none;
+    resize: 0;
+    padding: .5em;
 }
 
 .user-title {
@@ -123,7 +124,7 @@ textarea {
     display: flex;
     height: 3em;
     width: 45%;
-    outline: none;
+    outline: 0;
 }
 
 .search-image {
@@ -140,13 +141,13 @@ textarea {
     border-left-width: 0em;
     border-top-right-radius: .25em;
     border-bottom-right-radius: .25em;
+    padding: .5em;
 }
 
 .search-field::placeholder {
     font-size: 15px;
     font-weight: 300;
     color: #5356a4;
-    padding-left: .5em;
 }
 
 .container-bottom {
@@ -184,13 +185,10 @@ textarea {
     height: 100%;
 }
 
+.idea-body,
 .idea-title {
     font-size: 15px;
-}
-
-.idea-body {
-    font-size: 15px;
-    margin: 0;
+    padding: .4em;
 }
 
 .idea-comment {
@@ -201,12 +199,12 @@ textarea {
     color: #ffffff;
     background: #5356a4;
     border: .15em solid #1f1f3d;
-    border-top: none;
+    border-top: 0;
     margin: 0;
 }
 
 .card-icon {
-    padding: .1 em;
+    padding: .1em;
     height: 1.75em;
     width: 1.75em;
 }
